# Codeforces-solutions

./: 112A.cpp  118A.cpp  1917B.cpp  1A.cpp  22A.cpp  236A.cpp  318A.cpp  339A.cpp  4A.cpp  514A.cpp  546A.cpp  677A.cpp  69A.cpp  71A.cpp  734A.cpp  782A.cpp  909div3B.cpp  96A.cpp  CMakeLists.txt  bit++.cpp  contest1.cpp  contest905.cpp  contest909.cpp  div2906.cpp  luckynumber.cpp  stringtask.cpp  test.cpp  watermelon4A.cpp  yarikandArray.cpp
50B/: 58A.cpp
