cmake_minimum_required(VERSION 3.26)
project(CF)

set(CMAKE_CXX_STANDARD 14)

add_executable(CF
        .vscode/118A.cpp
        1A.cpp
        236A.cpp
        339A.cpp
        4A.cpp
        69A.cpp
        71A.cpp
        contest1.cpp
        contest905.cpp
        div2906.cpp
        luckynumber.cpp
        watermelon4A.cpp)
